--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,5 +11,16 @@
   "gridDemo": "Grid demo",
   "links": "Links",
   "actualBreakpoint": "Actual breakpoint",
-  "arentLoggedIn": "You arn't logged in."
+  "arentLoggedIn": "You arn't logged in.",
+  "clearSelection": "Clear selection",
+  "clearSelections": "Clear selections",
+  "posts": "Posts",
+  "newPost": "New post",
+  "deletePost": "Delete post",
+  "deletePosts": "Delete posts",
+  "editPost": "Edit post",
+  "search": "Search",
+  "rowsPerPageLabel": "Rows/page",
+  "title": "Title",
+  "content": "Content"
 }
